[Simon] "ask/tell" integration in SUMOjEdit